# tkinter-calculator

./: pyproject.toml
ncalculator/: App.py  main.py  statemachine.py
